lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slideitin-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: slideitin-static-ip
    networking.gke.io/managed-certificates: slideitin-cert
    kubernetes.io/ingress.class: "gce"
    cloud.google.com/neg: '{"ingress": true}'
spec:
  rules:
  - host: justslideitin.com  # Actual domain
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: slideitin-backend-neg
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slideitin-frontend-neg
            port:
              number: 80
